# UAV_drone_ICN

./: .env  .env.drone.example  .env.example  .gitignore  Makefile  NEXT_STEPS.txt  Q2_JOURNAL_ROADMAP.txt  README.md  SETUP_WSL2_GCS.md  docker-compose.drone.yml  docker-compose.local.yml  docker-compose.yml  export_openapi.py  gateway_logs.txt  pyproject.toml  pytest.ini  start_gcs_sitl.bat  start_sitl.bat
client/: test_hybrid.py
client/audio_router/: README.md  audio_manager.py  get_device.py  inbound.py  main.py  test_audio_divice.py  test_promat_silero.py  test_silero.py
client/meet_integration/: meet_client.py
client/ui/: README.md  config.py  main_app.py  main_window.py  meeting_minutes.py  styles.py  ui_test.py
client/websocket_client/: ws_client.py
clients/drone-voice-app/: settings.gradle.kts
clients/drone_desktop_app/: README.md  pubspec.yaml
data/: aug_all_groups.json  aug_group1.json  aug_group23.json  intent_patterns_reference.json
data/splits/: test_unseen.json  val_seen.json  val_unseen.json
data/wav_clean/: ground_truth.json  ground_truth_full.json
docs/: DRONE_SETUP.md  SITL_SIMULATION_GUIDE.md
nginx/: Dockerfile  nginx.conf
scripts/: benchmark_latency.py  download_models.sh  drone_edge_client.py  evaluate_nlp.py  gcs_direct_client.py  health_check.py  requirements-research.txt  requirements-train.txt  run_ablation_study.py  test_asr_quality.py  test_drone_client.py  test_ghi_am.py  train_drone_llm.py
scripts/gcs/: gcs_flight_controller.py  gcs_main.py  (+2 more)
test/: test_e2e_simulator.py  test_nlp_pipeline.py  whisper_test.py
(+60 files in other folders)
