[project]
name = "UAV_drone_ICN"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2",
    "funasr>=1.3.1",
    "httpx>=0.28.1",
    "librosa>=0.11.0",
    "modelscope>=1.35.3",
    "numpy>=2.4.3",
    "onnxruntime>=1.24.4",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "setuptools>=82.0.1",
    "silero-vad>=6.2.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.11.0",
    "uvicorn>=0.42.0",
    "webrtcvad-wheels>=2.0.14",
    "websockets>=16.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
